.smallbutton class added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <img src="/images/signup.png" alt="Sign Up">
-<img src="/images/supportus.png" alt="Support Us">
+<img class="small-button" src="/images/supportus.png" alt="Support Us">
 
 <div class="posts">
   {% for post in site.posts %}
