--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<img src="/images/signup.png" alt="Sign Up">
-<img class="small-button" src="/images/supportus.png" alt="Support Us">
+<a href="/registration/"><img src="/images/signup.png" alt="Sign Up"></a>
+<img src="/images/supportus.png" alt="Support Us">
 
 <div class="posts">
   {% for post in site.posts %}
