--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 <a href="/registration/"><img src="/images/signup.png" alt="Sign Up"></a>
-<img src="/images/supportus.png" alt="Support Us">
+
+<a href="https://www.gofundme.com/f/wazsmw?utm_source=customer&utm_medium=copy_link-tip&utm_campaign=p_cp+share-sheet"><img src="/images/supportus.png" alt="Support Us">
 
 <div class="posts">
   {% for post in site.posts %}
