--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <a href="/registration/"><img src="/images/signup.png" alt="Sign Up"></a>
 
-<a href="https://www.gofundme.com/f/wazsmw?utm_source=customer&utm_medium=copy_link-tip&utm_campaign=p_cp+share-sheet"><img src="/images/supportus.png" alt="Support Us">
+<a href="https://www.gofundme.com/f/wazsmw?utm_source=customer&utm_medium=copy_link-tip&utm_campaign=p_cp+share-sheet"><img src="/images/supportus.png" alt="Support Us"></a>
 
 <div class="posts">
   {% for post in site.posts %}
