--- a/tos.html
+++ b/tos.html
@@ -1,3 +1,9 @@
+---
+type: page
+title: Terms of Service
+permalink: /tos/
+---
+
 <h1>Terms and Conditions</h1>
 
 <p>Last updated: February 13, 2020</p>
