--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@ permalink: /privacy/
         <p><strong>You</strong> means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.</p>
         <p>Under GDPR (General Data Protection Regulation), You can be referred to as the Data Subject or as the User as you are the individual using the Service.</p>    </li>
     <li>
-        <p><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to DEFENSA TECHNOLOGIES, 2910 16th STREET, EVERRET WASHINGTON 98201.</p>
+        <p><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to DEFENSA TECHNOLOGIES,704 228TH AVE NE #333, SAMMAMISH, WA 98045 .</p>
         <p>For the purpose of the GDPR, the Company is the Data Controller.</p>    </li>
         <li><strong>Affiliate</strong> means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.</li>
     <li><strong>Account</strong> means a unique account created for You to access our Service or parts of our Service.</li>
