--- a/tos.html
+++ b/tos.html
@@ -19,7 +19,7 @@ permalink: /tos/
 <p>For the purposes of these Terms and Conditions:</p>
 <ul>
       <li><strong>Affiliate</strong> means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.</li>
-  <li><strong>Account</strong> means a unique account created for You to access our Service or parts of our Service.</li>  <li><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to DEFENSA TECHNOLOGIES, 2910 16th STREET, EVERRET WASHINGTON 98201.</li>
+  <li><strong>Account</strong> means a unique account created for You to access our Service or parts of our Service.</li>  <li><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to DEFENSA TECHNOLOGIES, 704 228TH AVE NE #333, SAMMAMISH, WA 98045.</li>
   <li><strong>Content</strong> refers to content such as text, images, or other information that can be posted, uploaded, linked to or otherwise made available by You, regardless of the form of that content.</li>  <li><strong>Country</strong> refers to: Washington, United States</li>
     <li><strong>Feedback</strong> means feedback, innovations or suggestions sent by You regarding the attributes, performance or features of our Service.</li>  <li><strong>Goods</strong> refer to the items offered for sale on the Service.</li>  <li><strong>Orders</strong> mean a request by You to purchase Goods from Us.</li>    <li><strong>Promotions</strong> refer to contests, sweepstakes or other promotions offered through the Service.</li>      <li><strong>Service</strong> refers to the Website.</li>
     <li><strong>Subscriptions</strong> refer to the services or access to the Service offered on a subscription basis by the Company to You.</li>  <li><strong>Free Trial</strong> refers to a limited period of time that may be free when purchasing a Subscription.</li>  <li><strong>Terms and Conditions</strong> (also referred as "Terms") mean these Terms and Conditions that form the entire agreement between You and the Company regarding the use of the Service.</li>
@@ -223,5 +223,5 @@ permalink: /tos/
 <p>If you have any questions about these Terms and Conditions, You can contact us:</p>
 
 <ul>
-      <li>By email: info.safedm@gmail.com</li>
+      <li>By email: contact@defensatechnologies.org</li>
         </ul>
