--- a/privacy.html
+++ b/privacy.html
@@ -340,5 +340,5 @@ permalink: /privacy/
 <h1>Contact Us</h1>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-        <li>By email: info.safedm@gmail.com</li>
+        <li>By email: contact@defensatechnologies.org</li>
         </ul>
