--- a/privacy.html
+++ b/privacy.html
@@ -168,6 +168,26 @@ permalink: /privacy/
     </li>
                                     </ul>
 
+        <h2>Image Processing</h2>
+        <p>We may use third-party service providers to process images as a function to users of our Service.</p>
+        <ul>
+          <li>
+            <p><strong>Amazon Rekognition</strong></p>
+            <p>Amazon Rekognition is an AWS service for image recognition and analysis <a href="https://docs.aws.amazon.com/rekognition">https://docs.aws.amazon.com/rekognition</a>. Details to Amazon AWS privacy practices can be found here: <a href="https://aws.amazon.com/privacy">https://aws.amazon.com/privacy</a></p>
+          </li>
+          <li>
+            <p><strong>Watson Visual Recognition</strong></p>
+            <p>Watson Visual Recognition is an IBM service for image recognition and analysis <a href="https://www.ibm.com/cloud/watson-visual-recognition">https://www.ibm.com/cloud/watson-visual-recognition</a> </p>. Details to IBM Watson privacy practices can be found here: <a href="https://www.ibm.com/watson/data-privacy/">https://www.ibm.com/watson/data-privacy/</a></p>
+          </li>
+          <li>
+            <p><strong>Google Cloud Vision API</strong></p>
+            <p>Google Cloud Vision API is a Google service provided machine vision capabilities for applications cloud services <a href="https://cloud.google.com/vision">https://cloud.google.com/vision</a>. Details regarding Google privacy practices can be found here: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></p>
+          </li>
+          <li>
+            <p><strong>Microsoft Azure Computer Vision</strong></p>
+            <p>Microsoft Azure Computer Vision is a Microsoft service for image recognition and analysis <a href="https://azure.microsoft.com/en-us/services/cognitive-services/computer-vision/">https://azure.microsoft.com/en-us/services/cognitive-services/computer-vision/</a>. Details regarding Microsoft Azure privacy practices can be found here: <a href="https://azure.microsoft.com/en-us/support/legal/cognitive-services-compliance-and-privacy/">https://azure.microsoft.com/en-us/support/legal/cognitive-services-compliance-and-privacy/</a></p>
+          </li>
+        </ul>
 <h2>Advertising</h2>
 <p>We may use Service providers to show advertisements to You to help support and maintain Our Service.</p>
 <ul>
