link to register

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<a href="/registration/"><img src="/images/signup.png" alt="Sign Up"></a>
+<a href="https://register.safedm.com/"><img src="/images/signup.png" alt="Sign Up"></a>
 
 <a href="https://www.gofundme.com/f/wazsmw?utm_source=customer&utm_medium=copy_link-tip&utm_campaign=p_cp+share-sheet"><img src="/images/supportus.png" alt="Support Us"></a>
 
